--- a/pubs.html
+++ b/pubs.html
@@ -106,7 +106,7 @@
             </td>
             </tr>
 
-            <td width="15%" valign="center" align="center"><img src="images/climax.jpeg" alt="nthu" width="200" height="150"></td>
+            <td width="15%" valign="center" align="center"><img src="images/climax.png" alt="nthu" width="200" height="150"></td>
             </td>
             <td width="85%" style="padding:20px;vertical-align:middle">
                   <!-- <a class="tog" href="#irl-cr-2023">
@@ -155,7 +155,7 @@
                   <p></p>
                   <em> Published in Elsevier : Expert Systems with Application, 2023</em>
                   <div class="paper" id="open-2024">
-                    <a href="https://www.sciencedirect.com/science/article/pii/S0957417423015713" target="_blank">paper</a> /
+                    <a href="https://arxiv.org/abs/2305.03859" target="_blank">paper</a> /
                       <a class="tog" href="javascript:toggleblock('app_abs_open-24')">abstract</a> / 
                       <a class="tog" href="javascript:toggleblock('app_bib_open-24')">bibtex</a>
                       <p align="justify">
@@ -174,7 +174,7 @@
                         }
                         </bibtext>
                     </div>              
-                    <script language="JavaScript">hideblock('app_bib_apo-24');hideblock('app_abs_apo-24');</script>
+                    <script language="JavaScript">hideblock('app_bib_open-24');hideblock('app_abs_open-24');</script>
             </td>
 
           </tr>
