updating main page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <!--<base target="_blank">-->
-  <title>Nirjhar Das</title>
+  <title>Praharsh Nanavati</title>
   
-  <meta name="author" content="Nirjhar Das">
+  <meta name="author" content="Praharsh Nanavati">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <script src="https://kit.fontawesome.com/0260614595.js" crossorigin="anonymous"></script>
@@ -70,41 +70,29 @@
 			  <tr style="padding:0px">
 				<td style="padding:2.5%;width:63%;vertical-align:middle">
 				  <p style="text-align:center">
-					<name>Nirjhar Das</name>
+					<name>Praharsh Nanavati</name>
 				  </p>
 				<p>
-					I am a first year MTech (Research) student at the <a href="https://www.csa.iisc.ac.in/" target="_blank">Dept. of CSA</a>, IISc Bangalore working on problems in Computational Social Choice and Fairness under the guidance of Prof <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Siddharth Barman</a>.</p>
-				<p>
-					I graduated with a B.Tech in Electrical Engineering from <a href="https://home.iitd.ac.in/" target="_blank"> IIT Delhi</a>. 
-					My BTech thesis was in Reinforcement Learning and Multi-Armed Bandits under <a href="https://sites.google.com/site/arpanchattop/home" target="_blank">Prof. Arpan Chattopadhyay</a>, which was selected for the <span style="color:red">Best BTech Project Award</span>. 
-					I also completed a Minor in Cognitive and Intelligent Systems in the <a href="https://ee.iitd.ac.in/" target="_blank">Dept. of EE</a>, IIT Delhi. 
+					I am a Predoctoral Researcher at the Department of Computer Science and Automation at the Indian Institute of Science (IISc), Bangalore <a href="https://www.csa.iisc.ac.in/" target="_blank"> supervised by Dr. Siddharth Barman <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">, and am working on Causal Fairness in Machine Learning.
+					Previously, I was an integrated BS-MS Student at Indian Institute of Science Education and Research (IISER) Bhopal <a href="https://www.iiserb.ac.in/" target="_blank">, where I was advised by Dr. Vinod Kurmi <a href="https://vinodkkurmi.github.io/">. 
 				</p>
 				<p>
-					From August 2023 to June 2024, I worked as a Research Intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-india/" target="_blank">Microsoft Research India</a> under Dr. <a href="https://www.microsoft.com/en-us/research/people/gauravsinha/" target="_blank">Gaurav Sinha</a>. At MSRI, I worked on problems related to Multi-Armed Bandits in large action spaces and under various constraints. 
+					I am fortunate to have been co-advised by Dr. Karthikeyan Shanmugam <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> and Dr. Ranjitha Prasad <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en"> for my Master's thesis.
+					I am currently looking for doctoral positions in Causal Inference and the Theory of Machine Learning to tackle core problems at their intersection. I want to contribute to building robust automated decision making systems that are theoretically justified. 
+					I believe causality enforces safe and reliable decision making and that the field is ripe for meaningful and deep contributions.
+					I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
 				</p>
-				<!-- <p>
-					Before joining MSRI, I spent 3 wonderful months as a Research Assistant in the <i>Approximation Algorithms Lab</i> led by Prof <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Siddharth Barman</a> at the <a href="https://www.csa.iisc.ac.in/" target="_blank">Dept. of CSA</a>, IISc Bangalore, where I worked in Participatory Budgeting with Bandit Feedback.  
-				</p> -->
-				  <!-- <p>
-					My research interest spans theoretical and applied areas in Decision-Making Under Uncertainty and High Dimensional Probability. Recently, I have also started exploring Causal Inference.
-					I am also interested in other areas involving probability, algorithms and optimization. 
-					My broader research motivation is to understand the interaction of several agents and study emergent intelligent behaviours from simpler systems. 
-					Using these insights, I want to design agents that can learn in ways similar to humans, that is, agents that rely on abstraction and are data-efficient.
-				  </p>
-				  <p>
-					I also find it interesting to frame challenges related to large-scale systems like LLMs and Robotics in a succinct theoretical problem and propose principled but practical algorithms with theoretical guarantees.
-				  </p> -->
+
 				  <p style="text-align:center">
-					<a href="mailto:nirjhardas@iisc.ac.in">Email</a> &nbsp/&nbsp
+					<a href="mailto:praharsh19@iiserb.ac.in">Email</a> &nbsp/&nbsp
 					<a href="data/CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
-					<a href="https://scholar.google.com/citations?hl=en&user=Zf3YrgYAAAAJ" target="_blank">Google Scholar</a> &nbsp/&nbsp
-					<a href="https://www.linkedin.com/in/nirjhar-das-874596195" target="_blank">Linkedin</a> &nbsp/&nbsp
-					<a href="https://github.com/nirjhar-das" target="_blank">Github</a> &nbsp/&nbsp
-					<a href="https://twitter.com/stochastic_nir" target="_blank">Twitter(X)</a>
+					<a href="https://scholar.google.com/citations?hl=en&user=Imx0mr0AAAAJ&view_op=list_works" target="_blank">Google Scholar</a> &nbsp/&nbsp
+					<a href="https://www.linkedin.com/in/praharsh-nanavati-b07a091aa/" target="_blank">Linkedin</a> &nbsp/&nbsp
+					<a href="https://github.com/niftynans" target="_blank">Github</a> &nbsp/&nbsp
 				  </p>
 				</td>
 				<td style="padding:2.5%;width:40%;max-width:40%">
-				  <a href="images/NirjharDas-Circle-low-res.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/NirjharDas-Circle-low-res.png" class="hoverZoomLink"></a>
+				  <a href="images/praharsh_pic.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/praharsh_pic.png" class="hoverZoomLink"></a>
 				</td>
 			</tr>
 			</tbody>
