--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 					<name>Praharsh Nanavati</name>
 				  </p>
 				<p>
-					I am a Predoctoral Researcher at the Department of Computer Science and Automation at the Indian Institute of Science (IISc), Bangalore <a href="https://www.csa.iisc.ac.in/" target="_blank"> supervised by Dr. Siddharth Barman <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">, and am working on Causal Fairness in Machine Learning.
-					Previously, I was an integrated BS-MS Student at Indian Institute of Science Education and Research (IISER) Bhopal <a href="https://www.iiserb.ac.in/" target="_blank">, where I was advised by Dr. Vinod Kurmi <a href="https://vinodkkurmi.github.io/">. 
+					I am a Predoctoral Researcher at the Department of Computer Science and Automation at the Indian Institute of Science (IISc), Bangalore <a href="https://www.csa.iisc.ac.in/" target="_blank"></a> supervised by Dr. Siddharth Barman <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank"></a>, and am working on Causal Fairness in Machine Learning.
+					Previously, I was an integrated BS-MS Student at Indian Institute of Science Education and Research (IISER) Bhopal <a href="https://www.iiserb.ac.in/" target="_blank"></a>, where I was advised by Dr. Vinod Kurmi <a href="https://vinodkkurmi.github.io/"></a>. 
 				</p>
 				<p>
-					I am fortunate to have been co-advised by Dr. Karthikeyan Shanmugam <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> and Dr. Ranjitha Prasad <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en"> for my Master's thesis.
+					I am fortunate to have been co-advised by Dr. Karthikeyan Shanmugam <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"></a> and Dr. Ranjitha Prasad <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en"></a> for my Master's thesis.
 					I am currently looking for doctoral positions in Causal Inference and the Theory of Machine Learning to tackle core problems at their intersection. I want to contribute to building robust automated decision making systems that are theoretically justified. 
 					I believe causality enforces safe and reliable decision making and that the field is ripe for meaningful and deep contributions.
 					I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
