--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<a href="data/CV.pdf" target="_blank">CV</a> &nbsp/&nbsp
 					<a href="https://scholar.google.com/citations?hl=en&user=Imx0mr0AAAAJ&view_op=list_works" target="_blank">Google Scholar</a> &nbsp/&nbsp
 					<a href="https://www.linkedin.com/in/praharsh-nanavati-b07a091aa/" target="_blank">Linkedin</a> &nbsp/&nbsp
-					<a href="https://github.com/niftynans" target="_blank">Github</a> &nbsp/&nbsp
+					<a href="https://github.com/niftynans" target="_blank">Github</a> 
 				  </p>
 				</td>
 				<td style="padding:2.5%;width:40%;max-width:40%">
@@ -110,26 +110,19 @@
 			<p>
             <div style="width:100%;overflow-y:scroll; height:170px;">
                 <ul id="news">
-					<li><span style="color:rgb(22, 208, 214)">September 2024</span>: Our paper <a href="https://arxiv.org/abs/2404.06831" target="_blank"><i>Generalized Linear Contextual Bandits with Limited Adaptivity</i></a> got accepted as <span style="color:red">Spotlight</span> at NeurIPS 2024.</li>
-					<li><span style="color:rgb(22, 208, 214)">September 2024</span>: I presented our paper <a href="http://arxiv.org/abs/2406.10131" target="_blank"> <i>Linear Contextual Bandits with Hybrid Payoff: Revisited</i></a> at ECML-PKDD 2024 in Vilnius, Lithuania. My travel was partially funded by <i>Microsoft Research Travel Grant</i> and <i>ECML-PKDD DEI Scholarship</i>.</li>
-					<li><span style="color:rgb(22, 208, 214)">August 2024</span>: I officially started my MTech journey at CSA, IISc.</li>
-					<li><span style="color:rgb(22, 208, 214)">June 2024</span>: I am moving back to academia to pursue MTech (Research) under Prof. Siddharth Barman for the next 2 years.</li>
-					<li><span style="color:rgb(22, 208, 214)">June 2024</span>: Our work <a href="https://arxiv.org/abs/2402.10500" target="_blank"><i>Active Preference Optimization for Sample Efficient RLHF</i></a> got accepted in ICML 2024 Workshop on <a href="https://sites.google.com/view/tf2m/home">Theoretical Foundations of Foundation Models</a>.</li>
-					<li><span style="color:rgb(22, 208, 214)">June 2024</span>: Our work <a href="https://arxiv.org/abs/2402.10500" target="_blank"><i>Active Preference Optimization for Sample Efficient RLHF</i></a> got accepted at the <a href="https://sites.google.com/berkeley.edu/adaptivelearningworkshop2024/home">TTIC Adaptive Learning in Complex Environments Workshop</a>.</li>
-					<li><span style="color:rgb(22, 208, 214)">May 2024</span>: My MSR Internship work <a href="http://arxiv.org/abs/2406.10131" target="_blank"> <i>Linear Contextual Bandits with Hybrid Payoff: Revisited</i></a> under the guidance of Gaurav Sinha got accepted at the <a href="https://ecmlpkdd.org/2024/" target="_blank">ECML-PKDD</a> 2024. </li>
-					<li><span style="color:rgb(22, 208, 214)">December 2023</span>: Our work <a href="https://arxiv.org/abs/2305.08130" target="_blank"><i>Inverse Reinforcement Learning with Constraint Recovery</i></a> won the <span style="color:red">Best Paper Award</span> at the 10th International Conference on Pattern Recognition and Machine Intelligence (<a href="https://www.easychair.org/cfp/PReMI-23" target="_blank">PReMI</a>) 2023. Find the slides <a href=data/irl-cr-slides.pdf target="_blank">here</a>. </li>
-					<li><span style="color:rgb(22, 208, 214)">August 2023</span>: I started as a Research Intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-india/" target="_blank">MSR India</a></li>
-					<li><span style="color:rgb(22, 208, 214)">August 2023</span>: I received the <a href="https://alumni.iitd.ac.in/scholarships-awards/346" target="_blank">Rajiv Bambawale Cash Prize</a> for the <i>Best BTech Project</i> in the Dept of EE, IIT Delhi.</li>
-					<li><span style="color:rgb(22, 208, 214)">July 2023</span>: I am attending COLT 2023. Would love to meet and discuss about RL, Bandits, Online Learning and Algorithms in general.</li>
-					<li><span style="color:rgb(22, 208, 214)">July 2023</span>: I will be joining Microsoft Research India in Aug 2023 as a Research Intern under Gaurav Sinha.</li>
-					<li><span style="color:rgb(22, 208, 214)">June 2023</span>: Our paper <a href="https://arxiv.org/abs/2305.08130" target="_blank">Inverse Reinforcement Learning with Constraint Recovery</a> got accepted at the <a href="https://www.easychair.org/cfp/PReMI-23" target="_blank">10th International Conference on Pattern Recognition and Machine Intelligence (PReMI)</a> 2023</li>
-					<li><span style="color:rgb(22, 208, 214)">May 2023</span>: I started working at <i>Approximation Algorithms Lab</i> under Prof. Siddharth Barman in the area of Participatory Budgeting with Bandit Feedback.</li>
-					<li><span style="color:rgb(22, 208, 214)">April 2023</span>: I will be visiting <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Prof. Siddharth Barman</a>'s lab at IISc Bangalore from May 20. Would love to chat about new ideas if you are in Bangalore!</li>
-					<li><span style="color:rgb(22, 208, 214)">March 2023</span>: I started working with <a href="https://souradip-chakraborty.github.io/" target="_blank">Souradip Chakroborty</a> from <a href="https://www.umd.edu/">University of Maryland</a> in the area of Model Based Reinforcement Learning</li>
-					<li><span style="color:rgb(22, 208, 214)">February 2023</span>: I started working under <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Prof. Siddharth Barman</a> at the <a href="https://www.csa.iisc.ac.in/" target="_blank">Dept. of CSA</a>, IISc Bangalore in the area of Learning in Games with Bandit Feedback. </li>
-					<li><span style="color:rgb(22, 208, 214)">January 2023</span>: I am selected to be a part of the <a href="https://sites.google.com/view/researchweek2023/home" target="_blank">Research Week With Google</a> organised by Google Research, India. Would love to have a chat if you are attending!</li>
-					<li><span style="color:rgb(22, 208, 214)">January 2023</span>: I will be serving as a teaching assistant for the <a href="https://sites.google.com/site/arpanchattop/teaching/ell729-stochastic-control-and-reinforcement-learning" target="_blank">ELL729: Stochastic Control and Reinforcement Learning</a> at IIT Delhi taught by <a href="https://sites.google.com/site/arpanchattop/home" target="_blank">Prof. Arpan Chattopadhyay</a> for the Spring Semester of 2023.</li>
-                </ul>
+					<li><span style="color:rgb(22, 208, 214)">Oct 2023 - Jul 2024</span>: Open-Source Contributions: Causal Discovery and Causal Structure Learning at BayesAI.</li>
+					<li><span style="color:rgb(22, 208, 214)">January 2024</span>: Invited Talk: <a href="https://www.youtube.com/watch?v=4PqNgfzFARI" target="_blank"><i>"Causality and Network Science"</i></a> at ACM Winter School on Network Science.</li>
+					<li><span style="color:rgb(22, 208, 214)">January 2024</span>: CODS-COMAD 2024: Student Participant & Travel Grant Recipient.</li>
+					<li><span style="color:rgb(22, 208, 214)">September 2023</span>: Reviewer: European Conference on Artificial Intelligence (ECAI) 2023.</li>
+					<li><span style="color:rgb(22, 208, 214)">2024</span>: 39th Conference on Uncertainty in Artificial Intelligence (UAI) - Student Volunteer.</li>
+					<li><span style="color:rgb(22, 208, 214)">2024</span>: Professor Ram Kumar Scholarship Recipient.</li>
+					<li><span style="color:rgb(22, 208, 214)">2024</span>: GAME-ARTS Workshop, Indian Institute of Science - Invited Participant.</li>
+					<li><span style="color:rgb(22, 208, 214)">2024</span>: SICSS-IIITH: Invited Student Participant.</li>
+					<li><span style="color:rgb(22, 208, 214)">2022</span>: Founding Chair: ACM Student Chapter at IISERB.</li>
+					<li><span style="color:rgb(22, 208, 214)">2024</span>: ACM Winter School – FAccT: Invited Participant.</li>
+					<li><span style="color:rgb(22, 208, 214)">2023</span>: Students’ Undergraduate Research Conference – Azim Premji University: Poster Presenter.</li>
+					<li><span style="color:rgb(22, 208, 214)">2024</span>: 35th Annual Conference on Learning Theory (COLT) - Student Attendee.</li>
+				</ul>
             </div>
 			</p>
           </tr>
