--- a/index.html
+++ b/index.html
@@ -74,17 +74,12 @@
 				  </p>
 				<p>
 					I am a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">Department of Computer Science and Automation at the Indian Institute of Science (IISc), Bangalore</a> supervised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman </a>, and am working on Causal Fairness in Machine Learning.
-					Previously, I was an integrated BS-MS Student at the <a href="https://www.iiserb.ac.in/" target="_blank">Indian Institute of Science Education and Research (IISER) Bhopal </a>, where I was advised by <a href="https://vinodkkurmi.github.io/">Dr. Vinod Kurmi ></a>. 
+					Previously, I was an integrated BS-MS Student at the <a href="https://www.iiserb.ac.in/" target="_blank">Indian Institute of Science Education and Research (IISER) Bhopal.
+				<p>
+					I am fortunate to have been co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (Indraprastha Institute of Information Technology, Delhi)</a> as an external visiting student at IIITD for my Master's thesis.
 				</p>
 				<p>
-					I am fortunate to have been co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (Indraprastha Institute of Information Technology, Delhi)</a> for my Master's thesis.
-				</p>
-				<p>
-				I am currently looking for doctoral positions in Causal Inference and the Theory of Machine Learning to tackle core problems at their intersection. I want to contribute to building robust automated decision making systems that are theoretically justified. 
-					I believe causality enforces safe and reliable decision making and that the field is ripe for meaningful and deep contributions.
-				</p>
-				<p>
-					I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
+				I am currently looking for doctoral positions in Causal Inference and Learning Theory. I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
 				</p>
 
 				  <p style="text-align:center">
@@ -135,29 +130,15 @@
 		<a id="education"><heading>&nbsp;&nbsp;&nbsp;Education</heading></a>
 
 		<tr>
-			<td width="15%" valign="center" align="center"><img src="images/IISc.jpg" alt="nthu" width="70" height="70"></td>
+			<td width="15%" valign="center" align="center"><img src="images/iiserb.png" alt="nthu" width="70" height="70"></td>
 			<td width="85%" valign="top">
 			<p>
-				<span><strong>M.Tech (Research) in Computer Science</strong></span><span style="float:right">2024 - Present</span> <br>
-				<em><a href="https://iisc.ac.in/" target="_blank">Indian Institute of Science Bangalore</a></em>
+				<span><strong>BS-MS in Data Science & Engineering</strong></span><span style="float:right">2019 - 2024</span> <br>
+				<em><a href="https://www.iiserb.ac.in/" target="_blank">Indian Institute of Science Education and Research, Bhopal</a></em>
 				<br>
-				Advisor: <a href="https://csa.iisc.ac.in/~barman/" target="_blank">Prof. Siddharth Barman</a>
+				Advisor: <a href="https://vinodkkurmi.github.io/" target="_blank">Prof. Vinod Kurmi</a>
 				<br>
-				Bengaluru, India
-			</p>
-			</td>
-		</tr>
-
-		<tr>
-			<td width="15%" valign="center" align="center"><img src="images/IIT.png" alt="nthu" width="70" height="70"></td>
-			<td width="85%" valign="top">
-			<p>
-				<span><strong>B.Tech in Electrical Engineering</strong></span><span style="float:right">2019 - 2023</span> <br>
-				<em><a href="https://home.iitd.ac.in/" target="_blank">Indian Institute of Technology Delhi</a></em>
-				<br>
-				Advisor: <a href="https://sites.google.com/site/arpanchattop/home" target="_blank">Prof. Arpan Chattopadhyay</a>
-				<br>
-				New Delhi, India
+				Bhopal, India
 			</p>
 			</td>
 		</tr>
@@ -167,7 +148,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:left;font-size:small;">
-                  Updated on: 27th September, 2024
+                  Updated on: 22nd October, 2024
     
               <span style="float:right;">
                 Merci, <a href="https://jonbarron.info/" target="_blank">Jon Barron</a>!
