--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
 					<name>Praharsh Nanavati</name>
 				  </p>
 				<p>
-					I am a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">Department of Computer Science and Automation at the Indian Institute of Science (IISc), Bangalore</a> supervised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman </a>, and am working on Causal Fairness in Machine Learning.
-					Previously, I was an integrated BS-MS Student at the <a href="https://www.iiserb.ac.in/" target="_blank">Indian Institute of Science Education and Research (IISER) Bhopal.
+					I am a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA Department at IISc </a> supervised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman </a>, and am working on Causal Fairness in Machine Learning.
+					Previously, I was an integrated BS-MS Student at the <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
 				<p>
-					I am fortunate to have been co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (Indraprastha Institute of Information Technology, Delhi)</a> as an external visiting student at IIITD for my Master's thesis.
+					I am fortunate to have been co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (IIITD)</a> as an external visiting student for my Master's thesis.
+					I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
 				</p>
 				<p>
-				I am currently looking for doctoral positions in Causal Inference and Learning Theory. I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
+				I am currently looking for doctoral positions in Causal Inference and Learning Theory. 
 				</p>
 
 				  <p style="text-align:center">
