--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   Updated on: 22nd October, 2024
     
               <span style="float:right;">
-                Merci, <a href="https://jonbarron.info/" target="_blank">Jon Barron</a>!
+                Thank you for this template, <a href="https://jonbarron.info/" target="_blank">Jon Barron</a>!  :D
               </span>
                 
               </p>
