--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				  </p>
 				</td>
 				<td style="padding:2.5%;width:40%;max-width:40%">
-				  <a href="images/praharsh_pic.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/praharsh_pic.png" class="hoverZoomLink"></a>
+				<a href="images/praharsh_pic.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/praharsh_pic.png" class="hoverZoomLink"></a>
 				</td>
 			</tr>
 			</tbody>
@@ -106,22 +106,21 @@
 			<p>
             <div style="width:100%;overflow-y:scroll; height:170px;">
                 <ul id="news">
-					<li><span style="color:rgb(22, 208, 214)">Oct 2023 - Jul 2024</span>: Open-Source Contributions: Causal Discovery and Causal Structure Learning at BayesAI.</li>
-					<li><span style="color:rgb(22, 208, 214)">January 2024</span>: Invited Talk: <a href="https://www.youtube.com/watch?v=4PqNgfzFARI" target="_blank"><i>"Causality and Network Science"</i></a> at ACM Winter School on Network Science.</li>
+					<!-- <li><span style="color:rgb(22, 208, 214)">Oct 2023 - Jul 2024</span>: Worked as an <a href="https://www.linkedin.com/posts/activity-7216103491285458944-A_mI?utm_source=share&utm_medium=member_desktop">Open-Source Contributor</a> in Causal Discovery and Causal Structure Learning at BayesAI.</li> -->
+					<li><span style="color:rgb(22, 208, 214)">2024</span>: Professor Ram Kumar Scholarship Recipient at GAME-ARTS Workshop, Indian Institute of Science</li>
 					<li><span style="color:rgb(22, 208, 214)">January 2024</span>: CODS-COMAD 2024: Student Participant & Travel Grant Recipient.</li>
-					<li><span style="color:rgb(22, 208, 214)">September 2023</span>: Reviewer: European Conference on Artificial Intelligence (ECAI) 2023.</li>
-					<li><span style="color:rgb(22, 208, 214)">2024</span>: 39th Conference on Uncertainty in Artificial Intelligence (UAI) - Student Volunteer.</li>
-					<li><span style="color:rgb(22, 208, 214)">2024</span>: Professor Ram Kumar Scholarship Recipient.</li>
-					<li><span style="color:rgb(22, 208, 214)">2024</span>: GAME-ARTS Workshop, Indian Institute of Science - Invited Participant.</li>
-					<li><span style="color:rgb(22, 208, 214)">2024</span>: SICSS-IIITH: Invited Student Participant.</li>
-					<li><span style="color:rgb(22, 208, 214)">2022</span>: Founding Chair: ACM Student Chapter at IISERB.</li>
-					<li><span style="color:rgb(22, 208, 214)">2024</span>: ACM Winter School – FAccT: Invited Participant.</li>
-					<li><span style="color:rgb(22, 208, 214)">2023</span>: Students’ Undergraduate Research Conference – Azim Premji University: Poster Presenter.</li>
-					<li><span style="color:rgb(22, 208, 214)">2024</span>: 35th Annual Conference on Learning Theory (COLT) - Student Attendee.</li>
+					<li><span style="color:rgb(22, 208, 214)">December 2023</span>: Invited Talk: <a href="https://www.youtube.com/watch?v=4PqNgfzFARI" target="_blank"><i>"Causality and Network Science"</i></a> at the ACM Winter School on Network Science.</li>
+					<li><span style="color:rgb(22, 208, 214)">August 2023</span>: AUAI Student grant recipient and student volunteer at UAI 2023.</li>
+					<li><span style="color:rgb(22, 208, 214)">July 2023</span>: Reviewer: European Conference on Artificial Intelligence (ECAI) 2023.</li>
+					<li><span style="color:rgb(22, 208, 214)">July 2022</span>: Summer Institute in Computational Social Science - IIITH: Invited Student Participant.</li>
+					<li><span style="color:rgb(22, 208, 214)">July 2022</span>: Deepmind Student grant recipient andsStudent volunteer at COLT 2022.</li>
+					<li><span style="color:rgb(22, 208, 214)">August 2022</span>: I will be Founding Chair of the ACM Student Chapter at IISERB for a year starting this month.</li>
+					<li><span style="color:rgb(22, 208, 214)">December 2021</span>: I have been invited as a participant at the ACM Winter School on Fairness, Accountability, and Transparency in AI.</li>
+					<li><span style="color:rgb(22, 208, 214)">December 2019</span>: I will be presenting a poster at the Students’ Undergraduate Research Conference at Azim Premji University.</li>
 				</ul>
             </div>
 			</p>
-          </tr>
+        </tr>
         </tbody></table>
 		<br>
 		<br>
