--- a/experience.html
+++ b/experience.html
@@ -64,46 +64,87 @@
                     <td style="padding:20px;width:100%;vertical-align:middle;text-align:center;">
                         <heading>Work Experience</heading>
                 </td>
-                  </tr>
+                </tr>
             </table>
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tr>
-                    <td width="15%" valign="center" align="center"><img src="images/microsoft.png" alt="nthu" width="50" height="50"></td>
+                    <td width="15%" valign="center" align="center"><img src="images/IISc.png" alt="iisc" width="50" height="50"></td>
                     <td width="85%" valign="top">
-                    <p>
-                        <span><strong>Research Intern</strong></span><span style="float:right">August 2023 - June 2024</span> <br>
-                        <em><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-india/" target="_blank">Microsoft Research India</a></em>
-                        <br>
-                        Research Area: Multi-Armed Bandits in Large Action Spaces and under constraints
-                        <br>
-                    </p>
+                        <p>
+                            <span><strong>Research Associate</strong></span><span style="float:right">Aug 2024 - Present</span> <br>
+                            <em><a href="https://csa.iisc.ac.in/" target="_blank">Indian Institute of Science (IISc)</a></em>
+                            <br>
+                            Research Area: Causal Fairness Analysis and Theoretical Machine Learning
+                            <br>
+                            Supervisor: Dr. Siddharth Barman
+                        </p>
                     </td>
                 </tr>
                 <tr>
-                    <td width="15%" valign="center" align="center"><img src="images/mastercard.png" alt="nthu" width="80" height="60"></td>
+                    <td width="15%" valign="center" align="center"><img src="images/iiitd.png" alt="iiitd" width="50" height="50"></td>
                     <td width="85%" valign="top">
-                    <p>
-                        <span><strong>AI Research Intern</strong></span><span style="float:right">June 2022 - July 2022</span> <br>
-                        <em><a href="https://www.mastercard.com/global/en.html" target="_blank">Mastercard AI Garage</a></em>
-                        <br>
-                        Research Area: Semi-Supervised Deep Learning Framework for Credit Card Fraud Detection
-                        <br>
-                    </p>
+                        <p>
+                            <span><strong>MS Thesis</strong></span><span style="float:right">Jul 2023 - May 2024</span> <br>
+                            <em><a href="https://iiitd.ac.in/" target="_blank">Indraprastha Institute of Information Technology, Delhi</a></em>
+                            <br>
+                            Research Area: Causal Representation Learning and Structure Learning
+                            <br>
+                            Focus: Bridging the Potential Outcomes and Pearlian Frameworks
+                        </p>
                     </td>
                 </tr>
                 <tr>
-                    <td width="15%" valign="center" align="center"><img src="images/creatospace.png" alt="nthu" width="70" height="70"></td>
+                    <td width="15%" valign="center" align="center"><img src="images/inrs.png" alt="inrs" width="50" height="50"></td>
                     <td width="85%" valign="top">
-                    <p>
-                        <span><strong>Machine Learning Intern</strong></span><span style="float:right">September 2020 - January 2021</span> <br>
-                        <em><a href="https://creatospace.com/" target="_blank">Creatospace</a></em>
-                        <br>
-                         Project: Question/Answer Recommender System Model for Stack Overflow-like forums
-                        <br>
-                    </p>
+                        <p>
+                            <span><strong>MITACS Summer Intern</strong></span><span style="float:right">May 2023 - Jul 2023</span> <br>
+                            <em><a href="https://inrs.ca/en/" target="_blank">Institut national de la recherche scientifique</a></em>
+                            <br>
+                            Research Area: Probabilistic Modeling for Sports Analytics
+                            <br>
+                            Focus: Predicting Player Performance in Team Sports
+                        </p>
                     </td>
                 </tr>
-        
+                <tr>
+                    <td width="15%" valign="center" align="center"><img src="images/iiitd.png" alt="iiitd" width="50" height="50"></td>
+                    <td width="85%" valign="top">
+                        <p>
+                            <span><strong>BS Thesis</strong></span><span style="float:right">Jan 2023 - May 2023</span> <br>
+                            <em><a href="https://iiitd.ac.in/" target="_blank">Indraprastha Institute of Information Technology, Delhi</a></em>
+                            <br>
+                            Research Area: Post-Hoc Explainable AI Methods
+                            <br>
+                            Focus: Perturbation-based Local Interpretable Classifiers
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="15%" valign="center" align="center"><img src="images/qmul.png" alt="qmul" width="50" height="50"></td>
+                    <td width="85%" valign="top">
+                        <p>
+                            <span><strong>Research Assistant</strong></span><span style="float:right">Oct 2022 - Mar 2023</span> <br>
+                            <em><a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a></em>
+                            <br>
+                            Research Area: Causal Bayesian Networks for Prediction and Decision-Making
+                            <br>
+                            Focus: Unsupervised Machine Learning for Causal Structure Learning
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="15%" valign="center" align="center"><img src="images/iiitd.png" alt="iiitd" width="50" height="50"></td>
+                    <td width="85%" valign="top">
+                        <p>
+                            <span><strong>Summer Research Intern</strong></span><span style="float:right">May 2021 - Jul 2021</span> <br>
+                            <em><a href="https://iiitd.ac.in/" target="_blank">Indraprastha Institute of Information Technology, Delhi</a></em>
+                            <br>
+                            Research Area: Structure Learning from Observational Data
+                            <br>
+                            Focus: Influence Functions to Improve Causal Structure Learning
+                        </p>
+                    </td>
+                </tr>                
             </table>
         
 </html>
