--- a/experience.html
+++ b/experience.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <!--<base target="_blank">-->
-  <title>Nirjhar Das</title>
+  <title>Praharsh Nanavati</title>
   
-  <meta name="author" content="Nirjhar Das">
+  <meta name="author" content="Praharsh Nanavati">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -68,10 +68,10 @@
             </table>
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <tr>
-                    <td width="15%" valign="center" align="center"><img src="images/IISc.png" alt="iisc" width="50" height="50"></td>
+                    <td width="15%" valign="center" align="center"><img src="images/IISc.jpg" alt="iisc" width="50" height="50"></td>
                     <td width="85%" valign="top">
                         <p>
-                            <span><strong>Research Associate</strong></span><span style="float:right">Aug 2024 - Present</span> <br>
+                            <span><strong>Predoctoral Researcher</strong></span><span style="float:right">Aug 2024 - Present</span> <br>
                             <em><a href="https://csa.iisc.ac.in/" target="_blank">Indian Institute of Science (IISc)</a></em>
                             <br>
                             Research Area: Causal Fairness Analysis and Theoretical Machine Learning
