--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <!--<base target="_blank">-->
-  <title>Nirjhar Das</title>
+  <title>Praharsh Nanavati</title>
   
-  <meta name="author" content="Nirjhar Das">
+  <meta name="author" content="Praharsh Nanavati">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
