--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				  </p>
 				<p>
 					I am a Predoctoral Researcher at the <a href="https://www.csa.iisc.ac.in/" target="_blank">CSA Department at IISc </a> supervised by <a href="https://www.csa.iisc.ac.in/~barman/" target="_blank">Dr. Siddharth Barman </a>, and am working on Causal Fairness in Machine Learning.
-					Previously, I was an integrated BS-MS Student at the <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
+					Previously, I was an integrated BS-MS Student at <a href="https://www.iiserb.ac.in/" target="_blank">IISERB</a>.
 				<p>
 					I am fortunate to have been co-advised by <a href="https://scholar.google.com/citations?user=m4DyPcUAAAAJ&hl=en" target="_blank"> Dr. Karthikeyan Shanmugam (Google Deepmind, India) </a> and <a href="https://scholar.google.com.sg/citations?user=ADJe1AsAAAAJ&hl=en">Dr. Ranjitha Prasad (IIITD)</a> as an external visiting student for my Master's thesis.
 					I have worked in causal representation learning (CRL), causal discovery, explainable artificial intelligence (XAI), probabilistic models, and sports analytics.
@@ -107,7 +107,7 @@
             <div style="width:120%;overflow-y:scroll; height:170px;">
                 <ul id="news">
 					<!-- <li><span style="color:rgb(22, 208, 214)">Oct 2023 - Jul 2024</span>: Worked as an <a href="https://www.linkedin.com/posts/activity-7216103491285458944-A_mI?utm_source=share&utm_medium=member_desktop">Open-Source Contributor</a> in Causal Discovery and Causal Structure Learning at BayesAI.</li> -->
-					<li><span style="color:rgb(22, 208, 214)">2024</span>: Professor Ram Kumar Scholarship Recipient at GAME-ARTS Workshop, Indian Institute of Science</li>
+					<li><span style="color:rgb(22, 208, 214)">July 2024</span>: Professor Ram Kumar Scholarship Recipient at GAME-ARTS Workshop, Indian Institute of Science</li>
 					<li><span style="color:rgb(22, 208, 214)">January 2024</span>: CODS-COMAD 2024: Student Participant & Travel Grant Recipient.</li>
 					<li><span style="color:rgb(22, 208, 214)">December 2023</span>: Invited Talk: <a href="https://www.youtube.com/watch?v=4PqNgfzFARI" target="_blank"><i>"Causality and Network Science"</i></a> at the ACM Winter School on Network Science.</li>
 					<li><span style="color:rgb(22, 208, 214)">August 2023</span>: AUAI Student grant recipient and student volunteer at UAI 2023.</li>
@@ -147,7 +147,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:left;font-size:small;">
-                  Updated on: 22nd October, 2024
+                  Updated on: 24th October, 2024
     
               <span style="float:right;">
                 Thank you for this template, <a href="https://jonbarron.info/" target="_blank">Jon Barron</a>!  :D
