--- a/experience.html
+++ b/experience.html
@@ -76,7 +76,7 @@
                             <br>
                             Research Area: Causal Fairness Analysis and Theoretical Machine Learning
                             <br>
-                            Supervisor: Dr. Siddharth Barman
+                            Supervisor: Prof. Siddharth Barman
                         </p>
                     </td>
                 </tr>
@@ -87,9 +87,9 @@
                             <span><strong>MS Thesis</strong></span><span style="float:right">Jul 2023 - May 2024</span> <br>
                             <em><a href="https://iiitd.ac.in/" target="_blank">Indraprastha Institute of Information Technology, Delhi</a></em>
                             <br>
-                            Research Area: Causal Representation Learning and Structure Learning
+                            Research Area: Causal Representation Learning and Treatment Effect Estimation
                             <br>
-                            Focus: Bridging the Potential Outcomes and Pearlian Frameworks
+                            Supervisors: Prof. Ranjitha Prasad, Dr. Karthikeyan Shanmugam
                         </p>
                     </td>
                 </tr>
@@ -100,9 +100,9 @@
                             <span><strong>MITACS Summer Intern</strong></span><span style="float:right">May 2023 - Jul 2023</span> <br>
                             <em><a href="https://inrs.ca/en/" target="_blank">Institut national de la recherche scientifique</a></em>
                             <br>
-                            Research Area: Probabilistic Modeling for Sports Analytics
+                            Research Area: Probabilistic Modeling for Player Performance in Team Sports
                             <br>
-                            Focus: Predicting Player Performance in Team Sports
+                            Supervisor: Prof. Leszek Szczecinski
                         </p>
                     </td>
                 </tr>
@@ -113,9 +113,9 @@
                             <span><strong>BS Thesis</strong></span><span style="float:right">Jan 2023 - May 2023</span> <br>
                             <em><a href="https://iiitd.ac.in/" target="_blank">Indraprastha Institute of Information Technology, Delhi</a></em>
                             <br>
-                            Research Area: Post-Hoc Explainable AI Methods
+                            Research Area: Perturbation-based Local Interpretable Classifiers
                             <br>
-                            Focus: Perturbation-based Local Interpretable Classifiers
+                            Supervisor: Prof. Ranjitha Prasad
                         </p>
                     </td>
                 </tr>
@@ -126,9 +126,9 @@
                             <span><strong>Research Assistant</strong></span><span style="float:right">Oct 2022 - Mar 2023</span> <br>
                             <em><a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a></em>
                             <br>
-                            Research Area: Causal Bayesian Networks for Prediction and Decision-Making
+                            Research Area: A survey of Causal Structure Learning Algorithms
                             <br>
-                            Focus: Unsupervised Machine Learning for Causal Structure Learning
+                            Supervisor: Prof. Anthony Constantinou
                         </p>
                     </td>
                 </tr>
@@ -139,9 +139,9 @@
                             <span><strong>Summer Research Intern</strong></span><span style="float:right">May 2021 - Jul 2021</span> <br>
                             <em><a href="https://iiitd.ac.in/" target="_blank">Indraprastha Institute of Information Technology, Delhi</a></em>
                             <br>
-                            Research Area: Structure Learning from Observational Data
+                            Research Area: Interpretable Machine Learning
                             <br>
-                            Focus: Influence Functions to Improve Causal Structure Learning
+                            Supervisor: Prof. Ranjitha Prasad
                         </p>
                     </td>
                 </tr>                
