--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <div style="width:120%;overflow-y:scroll; height:170px;">
                 <ul id="news">
 					<!-- <li><span style="color:rgb(22, 208, 214)">Oct 2023 - Jul 2024</span>: Worked as an <a href="https://www.linkedin.com/posts/activity-7216103491285458944-A_mI?utm_source=share&utm_medium=member_desktop">Open-Source Contributor</a> in Causal Discovery and Causal Structure Learning at BayesAI.</li> -->
+					<li><span style="color:rgb(22, 208, 214)">November 2024</span>: Submitted Preprint titled, 'Representation Learning Preserving Ignorability and Covariate Matching for Treatment Effects' to CLeaR 2025!</li>
 					<li><span style="color:rgb(22, 208, 214)">July 2024</span>: Professor Ram Kumar Scholarship Recipient at GAME-ARTS Workshop, Indian Institute of Science</li>
 					<li><span style="color:rgb(22, 208, 214)">January 2024</span>: CODS-COMAD 2024: Student Participant & Travel Grant Recipient.</li>
 					<li><span style="color:rgb(22, 208, 214)">December 2023</span>: Invited Talk: <a href="https://www.youtube.com/watch?v=4PqNgfzFARI" target="_blank"><i>"Causality and Network Science"</i></a> at the ACM Winter School on Network Science.</li>
