--- a/pubs.html
+++ b/pubs.html
@@ -83,7 +83,8 @@
                   <br>
                   <p></p>
                   <em> Submitted to CLeaR 2025</em>
-                  <div class="paper" id="hylinucb-2024">
+                  <!-- Uncomment and change later! -->
+                  <!-- <div class="paper" id="hylinucb-2024">
                     <a href="https://arxiv.org/abs/2406.10131" target="_blank">paper</a> /
                       <a class="tog" href="javascript:toggleblock('app_abs_hylinucb-24')">abstract</a> / 
                       <a class="tog" href="javascript:toggleblock('app_bib_hylinucb-24')">bibtex</a>
@@ -101,7 +102,7 @@
                           year="2024" </br>
                         }
                         </bibtext>
-                    </div>              
+                    </div>               -->
                     <script language="JavaScript">hideblock('app_bib_hylinucb-24');hideblock('app_abs_hylinucb-24');</script>
             </td>
             </tr>
