--- a/pubs.html
+++ b/pubs.html
@@ -84,7 +84,7 @@
                   <p></p>
                   <em> Submitted to CLeaR 2025</em>
                   <div class="paper" id="hylinucb-2024">
-                    <a href="https://arxiv.org/abs/2406.10131" target="_blank">paper</a> /
+                    <a href="" target="_blank">paper</a> / <!-- ENTER PAPER LINK HERE LATER -->
                       <a class="tog" href="javascript:toggleblock('app_abs_hylinucb-24')">abstract</a> / 
                       <a class="tog" href="javascript:toggleblock('app_bib_hylinucb-24')">bibtex</a>
                       <p align="justify">
@@ -93,13 +93,13 @@
                         </i>
                       </p>
                       <bibtext xml:space="preserve" id="app_bib_hylinucb-24">
-                        @InProceedings{das2024linear, </br>
+                        <!-- @InProceedings{das2024linear, </br>
                           author="Das, Nirjhar,
                           Sinha, Gaurav", </br>
                           title="Linear Contextual Bandits with Hybrid Payoffs: Revisited",</br>
                           booktitle="European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases", </br>
                           year="2024" </br>
-                        }
+                        } ENTER BIBTEX CITATION HERE--> 
                         </bibtext>
                     </div>              
                     <script language="JavaScript">hideblock('app_bib_hylinucb-24');hideblock('app_abs_hylinucb-24');</script>
